content/projects/neuralNetCode/nn.css
.divider {
  width: 100%;
  height: 1px;
  background-color: var(--tertiary);
  margin: 0.5rem 0;
}

#controls {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap:1rem;
  font-size: smaller;
}
@media screen and (max-width: 560px) {
  #controls {
    font-size: small;

  }
}


.controlGroup {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  gap:1rem;
}

button[type="button"] {
  background: var(--button-bg);
  border-radius: var(--radius);
  color:var(--button-fg);
  border: solid 1px var(--button-fg);
  padding: 0.5rem 1rem;
  transition: all 0.2s ease-in-out;
  font-weight: bold;
}
button[type="button"]:disabled {
  opacity: 0.7;
}
button[type="button"]:enabled:hover {
  background: var(--button-fg);
  color:var(--button-bg);
  border: solid 1px var(--button-fg);
}
#resetButton{
  background: #fdeae4;
  border: solid 1px rgb(170, 0, 0);
  color: rgb(170, 0, 0);
}
#resetButton:hover{
  background: rgb(170, 0, 0);
  color: rgb(253, 234, 228);
  border: solid 1px #aa0000;
}
input, select{
  background: var(--code-bg);
  border-radius: var(--radius);
  color:var(--primary);
  border: solid 1px var(--border);
  padding: 0.3rem 0.5rem;

}
input:focus, select:focus{
  outline: revert;
}

#trainingData {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  column-gap: 0.4rem;
  padding: 0.4rem;
}
.trainingImage img{
  width: 100%;
  object-fit: contain;
  image-rendering: pixelated;
  border-radius: 0px;
  margin:0px;
  cursor: pointer;
  opacity: 0.7;
}
.trainingImage{
  height:100%;
  width:100%;
}
.trainingImage img:hover{
  opacity: 1;
}


body.dark .trainingImage img{
  filter: invert(1);
}

#graphAreaContainer {
  width: 100%;
  /* background-color: rgb(245, 245, 245);
  border-radius: var(--radius); */
  position: relative;
  height: 100%;
}

#gaWrapper{
  width: 100%;
  height: 100%;
  background-color: white;
  border-radius: var(--radius);
  padding: 1rem;
}

#graphArea {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: none;
  width: 100%;
  z-index: 2;
  position: relative;
}

  
.gaCol{
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap:5px;
  height: 100%;
  width: 100%;
  align-items: center;
  overflow:scroll;
}

.gaCol.col_1{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  height: fit-content;
  width: fit-content;
}
.node{
  height:2rem;
  width: 2rem; 
  border-radius: 4px;
  background: black;
  margin: 0;
  padding: 0;
  border: solid 0.1rem white;
}

.colWrapper{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}
#svgContainer {
  width: 100%;
  height: 100%;
  position:absolute;
  top:0;
  left:0;
  z-index: 0;
}

#statsText {
  margin:0;
}
@media screen and (max-width: 500px) {
  .node{
    height:1rem;
    width: 1rem; 
  }
  .gaCol{
    gap:3px;
  }
  #svgContainer{
    opacity: 0.8;
  }
}

